add netty demo